2005-12-14  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* gnu/testlet/java/lang/Class/newInstance.java: Changed a criterion.

2005-12-13  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/File/newFileURI.java: New test.

2005-12-13  Gary Benson <gbenson@redhat.com>

	* gnu/testlet/java/security/Security/property.java: Test handling
	of null values.

2005-12-12  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/JComponent/getPreferredSize.java:
	New test.

2005-12-12  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/ViewportLayout/layoutContainer.java
	New test for this layout manager.

2005-12-09  Gary Benson <gbenson@redhat.com>

	* gnu/testlet/java/lang/Class/security.java: New test.

2005-12-09  Lillian Angel  <langel@redhat.com>

	* gnu/testlet/javax/swing/text/html/HTML/ElementTagAttributeTest.java: 
	New test.

2005-12-08  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/javax/swing/JEditorPane/ConstructorsAndTypes.java: New test.

2005-12-08  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/javax/swing/JEditorPane/ContentType.java: New test.

2005-12-07  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/javax/swing/JFormattedTextField/JFormattedTextFieldTests.java:
	Removed missing import.

2005-12-07  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/javax/swing/text/BoxView: New directory.
	* gnu/testlet/javax/swing/text/BoxView/spans.java: New test.

2005-12-07  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/JFileChooser/MyFileChooser.java: 
	New support class.

2005-12-07  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/lang/Double/toHexString.java: New file.
	* gnu/testlet/java/lang/Float/toHexString.java: New file.

2005-12-07  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/javax/swing/JTextArea/preferredSize.java: New test.

2005-12-07  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/JComponent/constructor.java: New test.